Ensure content flows and stays centered on small screens (#27)
* Ensure content flows and stays centered on small screens

Fixes #18

* Do not overflow image, instead resize with page

* update CHANGELOG


---------

--- a/xess/xess.css
+++ b/xess/xess.css
@@ -28,12 +28,6 @@ main {
   margin: auto;
 }
 
-@media only screen and (max-device-width: 736px) {
-  main {
-    padding: 0;
-  }
-}
-
 ::selection {
   background: #d3869b;
 }
